--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <input type="number" id="display" readonly />
         </div>
         <div class="btn4">
-          <div>AC</div>
+          <div id="ac">AC</div>
           <div>+/-</div>
           <div>%</div>
           <div>÷</div>
